
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct utsname {int release; } ;


 int EXIT_FAILURE ;
 int assert (int) ;
 int dprintf (char*) ;
 int exit (int ) ;
 int strcpy (char*,int ) ;
 int strlen (int ) ;
 int uname (struct utsname*) ;

void get_kernel_version(char* output, int max_length) {
        struct utsname u;
        int rv = uname(&u);
        if (rv != 0) {
                dprintf("[-] uname())\n");
                exit(EXIT_FAILURE);
        }
        assert(strlen(u.release) <= max_length);
        strcpy(&output[0], u.release);
}
